fixed footer z-index

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,4 +1,5 @@
 footer {
+    position: absolute;
     color: #e0e0e0;
     width: 100%;
     font-size: 1rem;
